# loot

./: .gitattributes  .gitignore  .lootattributes  .lootignore  .vercelignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  dist-workspace.toml
.claude/skills/burn-secret/: SKILL.md
.claude/skills/diagnose-bounce/: SKILL.md
.claude/skills/diagnose-divergent/: SKILL.md
.claude/skills/diagnose-push-rejected/: SKILL.md
.claude/skills/diagnose-visibility/: SKILL.md
.claude/skills/grant-path/: SKILL.md
.claude/skills/land-change/: SKILL.md
.claude/skills/maroon-identity/: SKILL.md
.claude/skills/mint-agent-identity/: SKILL.md
.github/workflows/: release.yml  smoke-install.yml
.scratch/: sync-from-github.md  sync-to-github.md
.scratch/ca4-buoys/: map.md
.scratch/git-interop-bridge/: PR.md  map.md
.scratch/loot-site/: map.md
.scratch/thesis-proof-milestone/: map.md
crates/loot-bench/: Cargo.toml
crates/loot-bench/src/: lib.rs
crates/loot-cli/: Cargo.toml
crates/loot-cli/src/: bisect.rs  blame.rs  doctor.rs  draft.rs  dup.rs  emit.rs  error.rs  evolog.rs  ferry.rs  flags.rs  grep.rs  history.rs  hunks.rs  kv.rs  ledger.rs  lib.rs  main.rs  mergetool.rs  pick.rs  policy.rs  position.rs  reconcile.rs  render.rs  workspace.rs
crates/loot-cli/src/workspace/: lanes.rs  reports.rs
crates/loot-cli/tests/: cli_smoke.rs  describe_contention.rs  emit_snapshot.rs
crates/loot-codec/: Cargo.toml
crates/loot-codec/src/: attestation.rs  bundle_codec.rs  change_id.rs  format.rs  key_seal.rs  lib.rs  sealed.rs
crates/loot-core/: Cargo.toml
crates/loot-core/examples/: patched-client.rs
crates/loot-core/src/: bridge.rs  bundle_codec.rs  buoy.rs  burn.rs  converge.rs  engine.rs  escrow.rs  format.rs  hex.rs  lib.rs  liveness.rs  manifest.rs  oplog.rs  sealed.rs  store.rs  verdict.rs
crates/loot-core/src/engine/: change_graph.rs  custody.rs  merge.rs  negotiation.rs  object_store.rs  persist_codec.rs
crates/loot-first/: Cargo.toml
crates/loot-first/src/: forge.rs  harbor.rs  ledger.rs  lib.rs  main.rs  orchestrator.rs  policy.rs
crates/loot-identity/: Cargo.toml
crates/loot-identity/src/: key_seal.rs  lib.rs  peers.rs
crates/loot-net/: Cargo.toml
crates/loot-net/src/: lib.rs  mailbox.rs  relay_store.rs
crates/loot-net/tests/: sync_round_trip.rs
crates/loot-revset/: Cargo.toml
crates/loot-revset/src/: error.rs  eval.rs  lexer.rs  lib.rs  parser.rs
crates/loot-revset/tests/: revset.rs
crates/loot-wasm/: Cargo.toml
crates/loot-wasm/src/: lib.rs
crates/loot-wasm/tests/: parity.rs
crates/spike-crdt/: Cargo.toml
crates/spike-crdt/src/: lib.rs
crates/spike-dag/: Cargo.toml
crates/spike-dag/src/: change_graph.rs  lib.rs  object_store.rs
docs/: lore-comparison.md
docs/adr/: 0001-per-content-decrypt-then-merge-convergence.md  0002-encrypted-dag-foundation.md  0003-sealed-content-module-keyring-custody.md  0004-drop-plaintext-dedup-equality-oracle.md  0005-cli-slice-persistence-and-attributes.md  0006-workspace-auto-snapshot.md  0007-embargo-escrow-module.md  0008-grant-log-and-targeted-key-bundles.md  0009-two-level-revocation.md  0010-forward-maroon-implementation.md  0011-relay-stow-append-only.md  0012-per-object-loose-storage.md  0013-named-remotes-and-grant-bundle-delivery.md  0014-identity-keypairs-openssh-ed25519.md  0015-grant-authentication-and-trust.md  0016-identity-portability-and-rotation.md  0017-repostore-loot-layout.md  0018-signed-changes-authored-history.md  0019-format-versioning-and-compatibility.md  0020-compress-public-content.md  0021-object-level-wants-negotiation.md  0022-concurrent-agent-model-docks.md  0023-agent-facing-machine-output.md  0024-resumable-transfer.md  0024-thesis-proof-milestone.md  0025-buoy-resolver.md  0026-agent-identity-model.md  0026-git-interop-bridge.md  0027-hard-embargo-timed-sealed-grants.md  0028-git-interop-bridge.md  0029-stable-change-ids.md  0030-implicit-auto-snapshot-and-verb-surface.md  0031-operation-log-and-undo.md  0032-amend-supersession-and-loot-edit.md  0033-projecting-amended-changes-to-git.md  0034-sealed-lanes-over-a-shared-store.md  0035-lane-lifecycle.md  0036-harbor-serialized-integrator.md  0036-loot-product-site-and-install.md  0037-loot-product-site-and-install.md  (+4 more)
docs/agents/: concurrent.md  identity.md  issue-tracker.md  workflow.md
docs/bakeoff/: index.html
docs/dogfood/: 2026-07-07-pilot.md  drive-log.md
docs/evidence/: amend-divergence.md  concurrent-agents.md  loot-first.md  loot-hosts-loot.md  wave-proof-lanes.md
docs/pitch/: zk-host.md
docs/research/: deploy-chain-loot-site.md  install-prototype-loot.md  jj-ergonomics-prototype.md  jj-ergonomics.md  loot-first-workflow-prototype.md  presentational-boundary-audit-millerbyte-frontend.md  release-engineering-install-one-liner.md  shared-store-nwriter-audit.md  ts-sdk-path-scoped-fetching.md  ts-sdk-rust-bridging.md  windows-installer-integrity.md
docs/specs/: loot-adopt-target.md  loot-forge.md  loot-site.md
issues/: CA1-docks.md  CA2-dock-merge-harbor.md  CA3-porcelain-machine-output.md  CA4-buoy-resolver.md  GB1-git-interop-bridge.md  README.md  S1-format-versioning.md  S2-compress-public-content.md  S3-signed-changes.md  S4-attestation-lane.md  S5-wants-negotiation.md  S6-resumable-transfer.md  S7-pluggable-relay-backend-s3.md  S8-sparse-views.md  S9-relay-fault-injection-tests.md  create-agent-issues.sh  create-issues.sh
sdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: errors.ts  index.ts  loot-runner.ts  physical.ts  relay-transport.ts  repo.ts  working-overlay.ts
sdk/test/: physical.behavior.test.ts  physical.unit.test.ts  private.behavior.test.ts  pull.behavior.test.ts  push-errors.behavior.test.ts  read-contract.ts  read.behavior.test.ts  relay.unit.test.ts  working-overlay.test.ts  write.behavior.test.ts
site/: .gitignore  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
site/src/: routeTree.gen.ts  router.tsx  styles.css
test-repos/: new-test-repo.ps1
tools/: loot-day.ps1  loot-first.ps1  new-agent.ps1
(+58 files in other folders)
