[workspace]
resolver = "2"
members = [
    "crates/loot-core",
    "crates/loot-net",
    "crates/loot-identity",
    "crates/loot-cli",
    "crates/loot-bench",
    "crates/spike-dag",
    "crates/spike-crdt",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Connor Miller"]
repository = "https://github.com/connormiller/loot"

[workspace.dependencies]
loot-core = { path = "crates/loot-core" }
loot-net = { path = "crates/loot-net" }
loot-identity = { path = "crates/loot-identity" }
blake3 = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
rand = "0.8"
