[workspace]
resolver = "2"
members = [
    "crates/loot-core",
    "crates/loot-net",
    "crates/loot-identity",
    "crates/loot-cli",
    "crates/loot-bench",
    "crates/spike-dag",
    "crates/spike-crdt",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Connor Miller"]
repository = "https://github.com/connormiller/loot"

[workspace.dependencies]
loot-core = { path = "crates/loot-core" }
loot-net = { path = "crates/loot-net" }
loot-identity = { path = "crates/loot-identity" }
blake3 = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
axum = "0.7"
# rustls-tls (not native-tls) so the push/pull client speaks HTTPS to a
# TLS-terminating relay without pulling in OpenSSL — keeps loot's pure-Rust,
# no-system-TLS build (relay#57: the edge is nginx + Let's Encrypt).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["reusable_secrets", "static_secrets"] }
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }
# git plumbing for the interop bridge (`loot ferry`, ADR 0028). Objects + refs
# only — loot does the merge — so the network transports stay switched off.
git2 = { version = "0.19", default-features = false }
rand = "0.8"
chacha20poly1305 = "0.10"
