[package]
name = "loot-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "loot: a content-addressed, sealed-aware version control system"

# We don't publish loot-cli to crates.io (publish = false), but it IS the one
# product binary we ship via GitHub Releases — so opt it back into dist, which
# otherwise skips unpublished packages.
[package.metadata.dist]
dist = true

# The first product crate: a CLI over the canonical engine (ADR 0005).
# Dependency-light by design — args are parsed by hand, no clap. The async/HTTP
# transport tree is quarantined in loot-net; the CLI only calls its sync API.

[[bin]]
name = "loot"
path = "src/main.rs"

[features]
# White-box test access to the raw engine (`Workspace::repo`/`with_repo_mut`,
# R1 #177). Off by default, so a production build cannot reach the seam. The
# self dev-dependency below turns it on for the *binary* test target, whose
# `cfg(test)` does not reach this crate when it links itself as a library.
test-support = []

[dependencies]
loot-core.workspace = true
loot-net.workspace = true
loot-identity.workspace = true
blake3.workspace = true
git2.workspace = true

[dev-dependencies]
loot-cli = { path = ".", features = ["test-support"] }
