[package]
name = "loot-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
blake3.workspace = true
# Vetted AEAD for the Sealed content module (no novel crypto). AES-256-GCM via
# RustCrypto.
aes-gcm = "0.10"
getrandom = "0.2"
