[package]
name = "loot-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# The no-fs codec/crypto core (byte format, sync-bundle codec, sealed content,
# leaf value types). Extracted so it can compile to wasm; loot-core re-exports
# every item at its original path. Default features include zstd (native host).
loot-codec.workspace = true
thiserror.workspace = true
blake3.workspace = true
getrandom = "0.2"
# Verify-only: authored-change signature checking on apply/stow (S3, ADR 0018).
# loot-core VERIFIES (read-side DAG integrity); signing + key custody stay in
# loot-identity. Same version as the rest of the workspace.
ed25519-dalek.workspace = true
