[package]
name = "loot-identity"
version = "0.0.0"
edition.workspace = true
license.workspace = true

# Identity keypairs for loot (ADR 0014): ed25519 sign/verify, x25519 derive
# for sealed grant delivery, peer registry, and signed push envelopes.
# Isolated from loot-core (pure domain) and loot-net (async/HTTP) so both
# can depend on it without creating a cycle.

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ssh-key.workspace = true
rand.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
thiserror.workspace = true
