[package]
name = "loot-wasm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The in-memory SDK's WASM core: wasm-bindgen exports over loot-codec's
# crypto/codec (decode a sync bundle, AES-decrypt a sealed object, blake3
# addressing) plus the minimal diskless identity surface (ADR: TS SDK bridging,
# #383). zstd is NOT pulled in — public content is decompressed host-side in JS.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Direct path (not workspace-inherited) so `default-features = false` actually
# takes effect — that is what keeps zstd (C, unbuildable for wasm) out of the
# wasm core. Public content is inflated host-side in JS instead.
loot-codec = { path = "../loot-codec", default-features = false }
wasm-bindgen = "0.2"
blake3.workspace = true
ed25519-dalek.workspace = true
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
# Independent reference computations for the golden-parity harness.
aes-gcm = "0.10"
