[package]
name = "spike-dag"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
loot-core.workspace = true
# blake3 for change-id hashing only. Encryption/keys now live in
# loot_core::sealed (ADR 0003), so spike-dag no longer depends on aes-gcm.
blake3.workspace = true
thiserror.workspace = true

[dev-dependencies]
loot-bench = { path = "../loot-bench" }
tempfile = "3"
