[package]
name = "spike-dag"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Shim only: re-exports loot_core::engine::DagRepo for the bake-off (ADR 0002).
# The engine itself now lives in loot-core, which owns the crypto/storage deps.
loot-core.workspace = true

[dev-dependencies]
loot-bench = { path = "../loot-bench" }
tempfile = "3"
